ingress-nginx/ingress-port-forward/kubia-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubia
  template:
    metadata:
      labels:
        app: kubia
    spec:
      containers:
      - image: luksa/kubia:latest
        name: kubia
