ingress-nginx/ingress-port-forward/kubia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: kubia
  type: ClusterIP
