ingress-nginx/ingress-port-forward/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: xiaoming.com
    http:
      paths:
      - backend:
          service:
            name: kubia-service
            port:
              number: 8080
        path: /
        pathType: Prefix
